--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,8 +16,8 @@
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+   >
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
@@ -29,6 +29,15 @@
   <br>
   <center>
     <div class="container">
+      <div id="nav-placeholder">
+
+      </div>
+      
+      <script>
+      $(function(){
+        $("#nav-placeholder").load("nav.html");
+      });
+      </script><br><br><br>
       <div>
         <h3>HOME PAGE</h3><br>
         <hr><br>
@@ -45,11 +54,7 @@
   </h4>
   </div> <br><br>
 
-  <div class="col-md-5 offset-md-2"><a href="/">MAIN PAGE</a><br>
-    <a href="scan">SCAN PRODUCT NOW</a><br>
-    <a href="profile">OPEN PROFILE</a>
-  </div>
-
+  
 
   <br> <br>
 
