--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -53,6 +53,15 @@
 
  
   <div class="container">
+    <div id="nav-placeholder">
+
+    </div>
+    
+    <script>
+    $(function(){
+      $("#nav-placeholder").load("nav.html");
+    });
+    </script><br><br><br>
     <div class="row">
         <div class="col-md-10 offset-md-1 text-center  bg-primary">
             <h2> Profile </h2>
@@ -152,10 +161,7 @@
             </form>
 
         </div>
-        <div class="col-md-5 offset-md-2"><a href="/">MAIN PAGE</a><br>
-          <a href="scan">SCAN PRODUCT NOW</a><br>
-          <a href="home">HOME</a>
-        </div>
+     
     </div>
 
 
