--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -61,7 +61,8 @@
         <div class="col-md-8 offset-md-2" id="login" style="display: true" ;>
 
 
-           
+            <a href="/login">LOGIN</a><br><br>
+            <a href="/register">REGISTER</a>
         </div>
     </div>
     <!--to be ignored hidden value-->
